[tool.poetry]
name = "check-links-v1"
version = "0.1.0"
description = ""
authors = ["Denis Sharhov <you@example.com>"]
readme = "README.md"
packages = [{include = "check_links_v1"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
pytest = "^7.2.0"
coverage = "^6.5.0"
gevent = "^22.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
